--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hws2",
-  "homepage": "http://art-goncharenko.github.io",
+  "homepage": "https://art-goncharenko.github.io/Learning_React",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
